--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.container {
+/*.container {
 	font-family: Andale Mono;
 	vertical-align: center;
-	/*padding: 100px 100px 100px 500px;*/
-}
+	padding: 100px 100px 100px 500px;
+}*/
