--- a/app/views/about_me/index.html.erb
+++ b/app/views/about_me/index.html.erb
@@ -1,23 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<!--
-	     ******  ********  ******** ********** **         *******   **     **
-	    **////**/**/////  **////// /////**/// /**        **/////** /**    /**
-	   **    // /**      /**           /**    /**       **     //**/**    /**
-	  /**       /******* /*********    /**    /**      /**      /**/**    /**
-	  /**       /**////  ////////**    /**    /**      /**      /**/**    /**
-	  //**    **/**             /**    /**    /**      //**     ** /**    /**
-	   //****** /******** ********     /**    /******** //*******  //*******
-	    //////  //////// ////////      //     ////////   ///////    ///////
-	  GITHUB.COM/CESTLOU
-	-->
-	<title></title>
-	<script type="css"></script>
-	<link href="/assets/css/animations.css" rel="stylesheet">
-</head>
-<body class="container">
-	<div class="about-container">
+<div class="about-container">
+	<div class="col-lg-8" style="background-color:white;">
 		<h2 class="sub-header">Hello! I'm</h2>
 		<h1 class="header">Luna Alison Alvarez</h1>
 		<h3 class="more-info">A Full-Stack Web Developer currently living in Seattle, WA
@@ -25,9 +7,8 @@
 			Interests include: puppies, Ruby on Rails, and JavaScript (&amp; libraries)
 		</h3>
 		<%= link_to 'View My Blog Posts', controller: 'articles' %>
-		<div class="bio-container">
-			<%= image_tag("me.jpg", class: "bio-image") %>
-		</div>
 	</div>
-</body>
-</html>
+	<div class="col-md-2">
+		<%= image_tag("me.jpg", class: "bio-image") %>
+	</div>
+</div>
