--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,26 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body class="container">
-	<table>
-		<%= link_to 'New Article', new_article_path %>
-		<%= link_to 'Back To About Me', controller: 'about_me' %>
-		<tr>
-			<th>Title</th>
-			<th>Body</th>
-		</tr>
-		<% @articles.each do |article| %>
-			<tr>
-				<td>
-					<%= article.title %>
-				</td>
-				<td>
-					<%= article.text %>
-				</td>
-			</tr>
-		<% end %>
-	</table>
-</body>
-</html>
+<%= link_to 'New article', new_article_path %>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Text</th>
+    <th colspan="2"></th>
+  </tr>
+
+  <% @articles.each do |article| %>
+    <tr>
+      <td><%= article.title %></td>
+      <td><%= article.text %></td>
+      <td><%= link_to 'Show', article_path(article) %></td>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
+    </tr>
+  <% end %>
+</table>
+<%= link_to "Back To About", controller: 'about_me' %>
