--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <!--
+       ******  ********  ******** ********** **         *******   **     **
+      **////**/**/////  **////// /////**/// /**        **/////** /**    /**
+     **    // /**      /**           /**    /**       **     //**/**    /**
+    /**       /******* /*********    /**    /**      /**      /**/**    /**
+    /**       /**////  ////////**    /**    /**      /**      /**/**    /**
+    //**    **/**             /**    /**    /**      //**     ** /**    /**
+     //****** /******** ********     /**    /******** //*******  //*******
+      //////  //////// ////////      //     ////////   ///////    ///////
+    GITHUB.COM/CESTLOU
+  -->
+
   <title>OostNewSite</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <style type="text/css">
+    body {font-family: Andale Mono}
+  </style>
+
 </head>
-<body>
+<body class="container">
 
 <%= yield %>
 
