--- a/app/views/about_me/index.html.erb
+++ b/app/views/about_me/index.html.erb
@@ -1,5 +1,5 @@
 <div class="about-container">
-	<div class="col-lg-8" style="background-color:white;">
+	<div class="col-lg-8">
 		<h2 class="sub-header">Hello! I'm</h2>
 		<h1 class="header">Luna Alison Alvarez</h1>
 		<h3 class="more-info">A Full-Stack Web Developer currently living in Seattle, WA
@@ -8,7 +8,7 @@
 		</h3>
 		<%= link_to 'View My Blog Posts', controller: 'articles' %>
 	</div>
-	<div class="col-md-2">
+	<!-- <div> -->
 		<%= image_tag("me.jpg", class: "bio-image") %>
-	</div>
+	<!-- </div> -->
 </div>
