remove bootstrap, add foundation gem

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -7,3 +7,15 @@
 	vertical-align: center;
 	padding: 100px 100px 100px 500px;
 }*/
+
+body {
+	color: #fff;
+	font-family: 'Chivo', sans-serif;
+}
+
+.duh {
+	font-family: 'Tangerine', cursive, serif;
+	color: #9dc698;
+	font-size: 55px;
+	text-align: center;
+}
