--- a/app/views/about_me/index.html.erb
+++ b/app/views/about_me/index.html.erb
@@ -6,7 +6,7 @@
 			<br />
 			Interests include: puppies, Ruby on Rails, and JavaScript (&amp; libraries)
 		</h3>
-		<%= link_to 'View My Blog Posts', controller: 'articles' %>
+		<%= link_to 'View My Blog Posts', controller: 'articles', class: 'more-info' %>
 	</div>
 	<!-- <div> -->
 		<%= image_tag("me.jpg", class: "bio-image") %>
