--- a/app/assets/stylesheets/about_me.scss
+++ b/app/assets/stylesheets/about_me.scss
@@ -4,31 +4,25 @@
 
 
 .sub-header {
+	font-family: 'Maven Pro', sans-serif;
 	font-style: italic;
 	color: #fff;
 	margin-bottom: 0em;
 }
 
 .header {
-	color: red;
-	// font-style: italic;
+	color: #9dc698;
 	font-size: 62px;
 	font-family: 'Tangerine', cursive, serif;
 }
 
 .more-info {
+	font-family: 'Maven Pro', sans-serif;
 	color: #fff;
-	// background: -webkit-linear-gradient(276deg, black, white); /* For Safari 5.1 to 6.0 */
-	// background: -o-linear-gradient(276deg, black, white); /* For Opera 11.1 to 12.0 */
-	// background: -moz-linear-gradient(276deg, black, white); /* For Firefox 3.6 to 15 */
-	// background: linear-gradient(276deg, black, white); /* Standard syntax */
-	//   background: -webkit-gradient(#eee, #333);
-	// -webkit-background-clip: text;
-	// -webkit-text-fill-color: transparent;
 }
 
 a {
-	color: red;
+	color: #9dc698;
 	font-weight: bold;
 	text-decoration: none;
 	&:hover { text-decoration: underline;
@@ -45,27 +39,26 @@ a {
 
 .bio-image {
 	background-image: url('me.jpg');
-	/*position: absolute;*/
 	max-width: 30em;
 	background-repeat: no-repeat;
 	height: auto;
-	margin: -252px 0 75px 875px;
+	margin: -255px 0 75px 751px;
+	// opacity: 1000;
+    // filter: 1000; /* For IE8 and earlier */
 }
 
 body {
-  background: -webkit-linear-gradient(276deg, white, black); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(276deg, white, black); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(276deg, white, black); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(276deg, white, black); /* Standard syntax */
+	background: white;
+	background-image:
+		linear-gradient(
+		black, #fff
+	);
+	background-repeat:no-repeat, repeat, repeat;
 }
 
 .about-container {
-	// background: -webkit-linear-gradient(276deg, black, white); /* For Safari 5.1 to 6.0 */
-	// background: -o-linear-gradient(276deg, black, white); /* For Opera 11.1 to 12.0 */
-	// background: -moz-linear-gradient(276deg, black, white); /* For Firefox 3.6 to 15 */
-	// background: linear-gradient(276deg, black, white); /* Standard syntax */
-
-	margin: 1em 14em 1em 14em;
+    background-color: rgba(255,255,255,0.3);
+    padding: 4em 0 0em 4em;
 }
 
 
